--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,10 @@
     "tabs",
     "chrome://favicon/"
   ],
+  "background": {
+    "scripts": ["./src/background.js"],
+    "persistent": false
+  },
   "browser_action": {
     "default_title": "Minimo",
     "default_popup": "./src/popup.html"
